# github-growth-intelligence

./: .gitignore  README.md  main.py  pyproject.toml
.claude/: settings.local.json
backend/: main.py
backend/github_growth/: __init__.py  analytics.py  client.py  ingestion.py  models.py  service.py
backend/tests/: test_analytics.py  test_star_history.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: main.tsx  styles.css  types.ts
mcp_server/: client.py  main.py  models.py  service.py
